fixed white space in footer and single page component

--- a/src/app/shared/components/footer/footer-nav/footer-nav.component.scss
+++ b/src/app/shared/components/footer/footer-nav/footer-nav.component.scss
@@ -10,11 +10,12 @@ section {
 }
 
 .mobile-contact {
-    width: 90%;
-    padding: 20px 0px;
+    width: 100%;
+    padding: 20px 80px;
     display: flex;
     flex-direction: column;
     gap: 12px;
+    max-width: 1920px;
 }
 
 nav {
