--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -17,7 +17,6 @@ footer {
 
 section {
   width: 100%;
-  max-width: 1920px;
 }
 
 .content {
