--- a/src/app/single-project/single-project.component.scss
+++ b/src/app/single-project/single-project.component.scss
@@ -2,12 +2,13 @@
 @import 'keyframes';
 
 main {
-    @include element-size(100vh, 100%);
+    @include element-size(auto, 100%);
     background-image: url('./../../assets/notebook-paper.png');
     background-position: center;
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-color: #0E1013;
+    min-height: 100vh;
     color: black;
     display: flex;
     flex-direction: column;
@@ -16,26 +17,28 @@ main {
     position: relative;
 }
 
-footer{
-  width: 100%;
-  max-width: 1920px;
-  background-color: #0E1013;
+header{
+    position: relative;
+    width: 100%;
+    margin-bottom: 100px;
+}
+
+footer {
+    width: 100%;
+    background-color: #0E1013;
 }
 
 .content-wrapper {
     width: 100%;
-    flex-grow: 1;
     max-width: 1920px;
-    margin: 0 auto;
     color: black;
     display: flex;
     flex-direction: column;
-
+    flex-grow: 1;
     align-items: center;
     justify-content: center;
     position: relative;
-    margin-bottom: 200px;
-    margin-top: 80px;
+    padding-bottom: 80px;
 }
 
 .container-wrapper {
@@ -43,7 +46,9 @@ footer{
     flex-direction: column;
     position: relative;
     gap: 20px;
-    width: calc(100% - 240px);
+    width: 100%;
+    max-width: 1440px;
+
 }
 
 p {
@@ -62,6 +67,7 @@ p {
     flex-direction: column;
     justify-content: flex-start;
     gap: 24px;
+    padding-left: 120px;
 
     >span {
         display: flex;
@@ -101,6 +107,7 @@ p {
     flex-direction: column;
     gap: 48px;
     padding-top: 48px;
+    padding-right: 120px;
     color: white;
 }
 
@@ -291,7 +298,7 @@ app-header {
     }
 }
 
-@media(max-width: 980px) {
+@media(max-width: 990px) {
 
     .sticker,
     app-svg {
@@ -320,14 +327,15 @@ app-header {
 @media(max-width: 900px) {
     .project-details {
         width: 335px;
+        padding-left: 40px;
+    }
+
+    .project-showcase{
+        padding-right: 40px;
     }
 
     .project-wrapper {
         min-height: 480px;
-    }
-
-    .container-wrapper {
-        width: calc(100% - 140px);
     }
 
     .back {
@@ -344,109 +352,116 @@ app-header {
 
     .description>p {
         width: 250px;
-        font-size: 14px;
+        font-size: 16px;
     }
 
     .implementation>p {
         width: 300px;
-        font-size: 14px;
+        font-size: 16px;
     }
 
     #duration>p {
-        font-size: 14px;
+        font-size: 16px;
     }
 
     .skill-name {
-        font-size: 14px;
+        font-size: 16px;
     }
 }
 
-@media(max-width: 800px) {
-    .container-wrapper {
-        width: calc(100% - 90px);
+@media(max-width: 820px) {
+.project-details {
+        padding-left: 40px;
+    }
+
+    .project-showcase{
+        padding-right: 40px;
     }
 }
 
 @media(max-width: 750px) {
 
-.hide-desktop {
-    display: block;
-    visibility: visible;
-}
+    .hide-desktop {
+        display: block;
+        visibility: visible;
+    }
 
-.d_none_mobile {
-    display: none;
-    visibility: hidden;
-}
+    .d_none_mobile {
+        display: none;
+        visibility: hidden;
+    }
 
-main {
-    min-height: 100vh;
-    @include element-size(auto, 100%);
-    padding: 0px 20px;
-    gap: 0px;
-    background-image: url('./../../assets/project-view-bg.png');
-}
+    main {
+        min-height: 100vh;
+        @include element-size(auto, 100%);
+        padding: 0px 20px;
+        gap: 0px;
+        background-image: url('./../../assets/project-view-bg.png');
+        background-size: 100% 100%;
+    }
 
-.project-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    gap: 48px;
-}
-
-.container-wrapper {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    top: auto;
-    order: 0;
-    width: 100%;
-}
-
-.back {
-    position: relative;
-    top: auto;
-    left: 10px;
-    color: white;
-}
-
-.next {
-    position: relative;
-    bottom: auto;
-    right: auto;
-}
-
-.content-wrapper {
-    gap: 48px;
-}
-
-.mobile-buttons {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    >.back {
+    .project-wrapper {
         display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        gap: 48px;
+    }
+
+    .container-wrapper {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        top: auto;
+        order: 0;
+        width: 100%;
+    }
+
+    .back {
+        position: relative;
+        top: auto;
+        left: 10px;
+        color: white;
+    }
+
+    .next {
+        position: relative;
+        bottom: auto;
+        right: auto;
+    }
+
+    .content-wrapper {
+        gap: 48px;
+    }
+
+    .mobile-buttons {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
         align-items: center;
 
+        >.back {
+            display: flex;
+            align-items: center;
+
+        }
     }
-}
 
-.project-details {
-    margin-left: 0;
-}
+    .project-details {
+        margin-left: 0;
+        padding-left: 0;
+    }
 
-.project-showcase {
-    padding-top: 0;
-}
+    .project-showcase {
+        padding-top: 0;
+        padding-right: 0;
+    }
 
-.buttons {
-    margin-right: 25px;
-}
+    .buttons {
+        margin-right: 25px;
+    }
 }
 
 @media(max-width: 450px) {
@@ -465,7 +480,7 @@ main {
 
 @media(max-width: 360px) {
     main {
-        padding: 80px 5px;
+        padding: 20px 5px;
     }
 
     .next {
