--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,18 +13,21 @@ body {
   overflow-x: hidden;
 }
 /* WebKit-Browser (Chrome, Edge, Safari) */
-body::-webkit-scrollbar {
+html::-webkit-scrollbar,
+body ::-webkit-scrollbar {
   width: 6px;
   background: transparent;
 }
 
-body::-webkit-scrollbar-track {
-  background-color: #000;       /* Schwarzer Hintergrund */
+html::-webkit-scrollbar-track,
+body ::-webkit-scrollbar-track {
+  background-color: #cc0c0c;       /* Schwarzer Hintergrund */
   border-radius: 10px;          /* Abgerundete Ecken für den Track */
   border: none;
 }
 
-body::-webkit-scrollbar-thumb {
+html::-webkit-scrollbar-thumb,
+body ::-webkit-scrollbar-thumb {
   background-color: #505050;       /* Dunkelgrauer Daumen */
   border-radius: 10px;
   border: none;
@@ -32,12 +35,14 @@ body::-webkit-scrollbar-thumb {
 }
 
 /* Hover-Effekt */
-body::-webkit-scrollbar-thumb:hover {
+html::-webkit-scrollbar-thumb:hover,
+body ::-webkit-scrollbar-thumb:hover {
   background-color: #777;
 }
 
 /* Firefox */
-body {
+html,
+body  {
   scrollbar-width: thin;
   scrollbar-color: #b4b5b6 #010000cf;   /* Grau auf schwarzem Track */
 }
